--- a/team1/src/components/Login/login.css
+++ b/team1/src/components/Login/login.css
@@ -33,7 +33,8 @@
 .login .login__form {
     display: flex;
     flex-direction: column;
-    width: 520px;
+    max-width: 520px;
+    width: 100%;
     margin-top: 20px;
 }
 .login .login__form .login__label {
