--- a/team1/src/components/Navbar/Footer.css
+++ b/team1/src/components/Navbar/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #121212; /* Nền tối */
+  background-color: #292929; /* Nền tối */
   color: #fff;
   padding: 40px 0;
   font-family: Arial, sans-serif;
@@ -78,7 +78,7 @@
 
 .subscribe-form button {
   padding: 8px 16px;
-  background-color: #ff9800;
+  background-color: #EC720E;
   border: none;
   color: white;
   font-weight: bold;
@@ -148,5 +148,11 @@
 
   .social-icons {
     justify-content: center;
+  }
+}
+@media (max-width: 490px) {
+  .footer-logo {
+    width: 50px;
+    margin-bottom: 12px;
   }
 }
