--- a/team1/src/layouts/shop_layout.css
+++ b/team1/src/layouts/shop_layout.css
@@ -6,12 +6,11 @@
     background-color: #FFFFFF;
     box-sizing: border-box;
     grid-template-columns: minmax(0px,140px) repeat(8, 1fr) minmax(0px, 140px);
-    grid-template-rows: 65px auto 575px;
+    grid-template-rows: auto auto auto;
 }
 nav {
     grid-column: 1/-1;
     grid-row: 1/2;
-    border: 1px solid black;
 }
 main {
     grid-column: 1/-1;
