--- a/team1/src/components/Navbar/Header.css
+++ b/team1/src/components/Navbar/Header.css
@@ -38,7 +38,7 @@
 .logo-icon img {
   max-width: 145px;
   width: 100%;
-  height: auto
+  height: auto;
 }
 .logo-text {
   color: white;
@@ -96,6 +96,7 @@
   font-size: 2rem;
   cursor: pointer;
   margin-right: 16px;
+  padding: 0;
 }
 
 @media (max-width: 900px) {
@@ -107,3 +108,9 @@
     display: block;
   }
 }
+/*@media (max-width: 368px) {*/
+/*  .logo-icon img {*/
+/*    max-width: 50px;*/
+/*    width: 100%;*/
+/*  }*/
+/*}*/
