--- a/team1/src/components/flash-sale/flash-sale.css
+++ b/team1/src/components/flash-sale/flash-sale.css
@@ -12,14 +12,14 @@
     margin: 0 auto;
 }
 .fs-allProducts {
-    width: 1320px;
+    max-width: 1320px;
     height: 1380.06px;
     background-color: #FFFFFF;
     border-radius: 10px;
     margin: 4rem auto 1rem auto;
 }
 .fs-watched {
-    width: 1320px;
+    max-width: 1320px;
     height: 472.643px;
     background-color: #FFFFFF;
     margin: 1rem auto;
