--- a/team1/src/layouts/admin/adminLayout.css
+++ b/team1/src/layouts/admin/adminLayout.css
@@ -3,15 +3,15 @@
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
 }
-header {
+.admin-layout header {
     grid-column: 1/-1;
     grid-row: 1/2;
 }
-aside {
+.admin-layout aside {
     grid-column: 1/2;
     grid-row: 2/3;
 }
-main {
+.admin-layout main {
     grid-column: 2/-1;
     grid-row: 2/3
 }
