--- a/team1/src/components/admin-sidebar/adminSidebar.css
+++ b/team1/src/components/admin-sidebar/adminSidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
     width: 280px;
-    height: 100vh;
+    height: 100%;
     background: white;
     display: flex;
     flex-direction: column;
