--- a/team1/src/layouts/admin/adminLayout.css
+++ b/team1/src/layouts/admin/adminLayout.css
@@ -13,5 +13,37 @@
 }
 .admin-layout main {
     grid-column: 2/-1;
-    grid-row: 2/3
+    grid-row: 2/3;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: 150px;
+    gap: 20px ;
+    padding: 40px;
+
+}
+.one {
+    grid-column: span 3;
+}
+.bar-chart {
+    padding: 20px;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+    border-radius: 10px;
+    grid-column: span 8;
+    grid-row: span 3;
+}
+.doughnut-chart {
+    padding: 20px;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+    border-radius: 10px;
+    grid-column:  span 4;
+    grid-row: span 3;
+}
+.latest-products__card {
+    grid-column: span 4;
+    grid-row: span 4;
+
+}
+.latest-orders__table-card {
+    grid-column: span 8;
+    grid-row: span 4;
 }
