--- a/team1/src/components/admin-sidebar/adminSidebar.css
+++ b/team1/src/components/admin-sidebar/adminSidebar.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     padding: 20px;
     box-sizing: border-box;
-    border-right: 1px solid black;
+    border-right: 1px solid #eee;
 }
 
 
