--- a/team1/src/components/CartList/cartList.css
+++ b/team1/src/components/CartList/cartList.css
@@ -11,7 +11,8 @@
 }
 .cart-wrapper {
     display: flex;
-    gap:30px
+    gap:30px;
+    flex-wrap: wrap;
 }
 
 .cart-items-container {
@@ -23,6 +24,7 @@
     margin-bottom: 20px;
     gap: 10px;
     border-bottom: 1px solid #ccc;
+    flex-wrap: wrap;
 }
 .remove-btn {
     background-color: transparent;
@@ -90,7 +92,7 @@ input[type="date"] {
     text-align: center;
 }
 .total {
-    margin: 30px 0;
+    margin: 10px 0;
 }
 .total p {
     font-size: 16px;
@@ -123,9 +125,16 @@ input[type="date"] {
     display: flex;
     gap: 10px;
     margin-top: 20px;
+    flex-wrap: wrap;
 }
 
 .payment-icons img {
     width: 40px;
     height: auto;
+}
+
+@media (max-width: 982px) {
+    .cart-wrapper {
+        flex-direction: column;
+    }
 }
