--- a/team1/src/components/AuthorsTable/AuthorsTable.css
+++ b/team1/src/components/AuthorsTable/AuthorsTable.css
@@ -85,3 +85,17 @@ th, td {
   cursor: pointer;
   font-weight: bold;
 }
+.delete-btn {
+  background: none;
+  border: none;
+  color: #D3232A;
+  cursor: pointer;
+  font-weight: bold;
+}
+.reset-btn {
+  background: none;
+  border: none;
+  color: #f59e0b;
+  cursor: pointer;
+  font-weight: bold;
+}
