--- a/team1/src/components/NotificationPopup/NotificationPopup.css
+++ b/team1/src/components/NotificationPopup/NotificationPopup.css
@@ -1,4 +1,3 @@
-/* Container positioning */
 .notification-container {
   position: fixed;
   bottom: 20px;
@@ -6,7 +5,6 @@
   z-index: 1000;
 }
 
-/* Icon styling */
 .notification-icon {
   background-color: #ff7b00;
   color: white;
@@ -33,7 +31,7 @@
 }
 
 .shake {
-  animation: ring 0.6s infinite; /* nhanh hơn và mạnh hơn */
+  animation: ring 0.6s infinite;
 }
 
 
