--- a/team1/src/components/admin-latest-orders/latestOrder.css
+++ b/team1/src/components/admin-latest-orders/latestOrder.css
@@ -28,7 +28,7 @@
 
 .table-card__table th,
 .table-card__table td {
-    text-align: left;
+    text-align: center;
     padding: 12px 16px;
 }
 
@@ -40,6 +40,23 @@
 
 .table-card__table tr:not(:last-child) {
     border-bottom: 1px solid #eee;
+}
+
+.table-card__product {
+    display: flex;
+    flex-direction: column;
+}
+.table-card__product-item img {
+    width: 40px;
+    height: 40px;
+    margin-right: 12px;
+}
+.table-card__product-quantity {
+    display: flex;
+    flex-direction: column;
+    gap: 1.3rem;
+    font-size: 14px;
+    color: #555;
 }
 
 .table-card__status {
