--- a/team1/src/components/admin-latest-orders/latestOrder.css
+++ b/team1/src/components/admin-latest-orders/latestOrder.css
@@ -72,6 +72,10 @@
     background: #f59e0b;
 }
 
+.table-card__status--shipping {
+    background: #3b82f6;
+}
+
 .table-card__status--delivered {
     background: #10b981;
 }
