--- a/team1/src/components/AuthorsTable/AuthorsTable.css
+++ b/team1/src/components/AuthorsTable/AuthorsTable.css
@@ -99,3 +99,10 @@ th, td {
   cursor: pointer;
   font-weight: bold;
 }
+.unBlock-btn {
+    background: none;
+    border: none;
+    color: #00a33e;
+    cursor: pointer;
+    font-weight: bold;
+}
